tests/diagnostics/cases/types/05_let_type_mismatch_bool_to_f64.home
// Type mismatch: f64 binding given a bool literal.
fn main() {
    let s: f64 = true
}
